k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bonanza-index
  labels:
    name: bonanza-index
    app: bonanza-index
